<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="image_result">Image Result</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_search_options">SearchOptionsActivity</string>
    <string name="adv_search_options_text">Advanced Search Options</string>
    <string name="site_url_text">Enter a URL</string>
    <string name="image_size_text">Image Size</string>
    <string name="color_filter_text">Color Filter</string>
    <string name="image_type_text">Image Type</string>
    <string name="site_filter_text">Site Filter</string>
    <string name="save_options_text">Save</string>
    <string name="cancel_options_text">Cancel</string>
    <string name="action_share">Share</string>

</resources>
